testsuite/tests/th/T23829_hasty_b.stderr
T23829_hasty_b.hs:8:42: error: [GHC-28914]
    • Level error: ‘ty’ is used at level 0 but it is bound at level 1
    • In the untyped splice: $ty
      In the Template Haskell quotation:
        [t| forall (ty :: TypeQ). Proxy $ty |]

